<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/matchesFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_matches" />

    <item
        android:id="@+id/standingsFragment"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/nav_standings" />

    <item
        android:id="@+id/scorersFragment"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/nav_scorers" />

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/nav_favorites" />

</menu>
